// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component matches snapshot for default variant 1`] = `
<div
  class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
  data-theme="dark"
>
  <div
    class="sc-fhHczv eLkUHf"
  >
    <div
      class="sc-ggWZvA evJOyk"
    >
      <textarea
        class="sc-bRKDuR cwpftx"
        data-testid="text-area"
        placeholder="Enter text here"
      >
        snapshot default
      </textarea>
    </div>
  </div>
</div>
`;

exports[`TextArea Component matches snapshot for report variant 1`] = `
<div
  class="html-div x1ghz6dp x1717udv xet4sn1 x13zp6ng x78zum5 xdt5ytf x1us19tq x5yr21d xh8yej3"
  data-theme="dark"
>
  <div
    class="sc-fhHczv eLkUHf"
  >
    <div
      class="sc-ggWZvA evJOyk"
    >
      <textarea
        class="sc-hvigdm hDkxpu"
        data-testid="text-area"
        placeholder="Report here"
      >
        snapshot report
      </textarea>
    </div>
  </div>
</div>
`;
